--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,27 @@
   text-align: center;
   margin-bottom: 50px;
 }
+
+p { 
+  display: block;
+  clear: both;
+  width: 100%;
+  text-align: center;
+}
+ 
+.wrapper-content { 
+  width: 100%; 
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+  justify-content: space-around;
+  align-content: flex-start;
+  max-width: 940px;
+}
+
+@media(max-width: 990px){
+  .wrapper-content { 
+    max-width: 728px;
+  }
+}
