--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -9,3 +9,43 @@
   align-content: flex-start;
   overflow: auto;
 }
+
+.hide, .show {
+  transition: all 0.2s linear;
+}
+.hide { opacity: 0; height: 0; float: left; width: 1px; overflow: hidden; }
+.show { opacity: 1; height: auto; }
+
+.correct { color: green; }
+.incorrect { color: red; }
+
+.guesses { 
+  margin: 0; 
+  padding: 0;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+.shake {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
