--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .title {
   width: 100%;
   text-align: center;
-  margin: 10px auto 0px auto;
+  margin: 20px auto 10px auto;
+  padding: 0;
   font-size: 4em;
   font-family: 'Gloria Hallelujah', cursive;
   color: green;
+  line-height: 85px;
+}
+
+.instructions {
+  font-family: 'Gloria Hallelujah', cursive;
+  margin: 0;
+  padding: 0;
 }
 
 p { 
@@ -26,7 +34,23 @@ p {
 }
 
 @media(max-width: 990px){
+  .title { 
+    font-size: 3em;
+  }
+  .instructions {
+    font-size: .8em;
+    line-height: 1.45em;
+    max-width: 300px;
+    margin: 0 auto;
+  }
   .wrapper-content { 
     max-width: 728px;
+  }
+}
+
+@media(max-width: 640px){
+  .title { 
+    font-size: 2em;
+    line-height: 35px;
   }
 }
