--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -11,7 +11,11 @@
   transition: all .1s linear;
 }
 
-.card:hover,.card:active {
+.card:hover {
+  border: 15px solid #FFF;
+}
+
+.card:active {
   margin: 2px 0 23px 0;
   box-shadow: 0 2px 5px #777, 0 2px 5px #777;
 }
